alignment issues 1

--- a/Photos/photos.css
+++ b/Photos/photos.css
@@ -13,7 +13,6 @@ body{
     background-color: var(--bg-color);
     margin: 0;
     padding: 0;
-    margin-top: 50px;
 }
 #bulbimg{
     width: 150px;
